+Geoxygene-appli :  GL -> added the 'rendering methods', a generic way of describing how to draw features. A rendering method defines a set of shaders associated with a bunch of parameters needed to draw a feature with this method. Each method is described in a XML file and is transformed on the fly by Geoxygene into a GlProgram. Rendering methods are used internally by Geoxygene, e.g. to paint features in a awt-like style. Rendering methods are also used to define expressive rendering methods (e.g 'brush painting') and can be referenced in the expressive components of a SLD (To date : Fill and Stroke). Each parameters of a rendering method can be defined as a user input with restrictions on its values (range, type, ...). The goal of the rendering methods is to allow users to create new way of render geographic features without having to deal with code. +Geoxygene-appli : Samples SLD have been cleaned up and rewritten with rendering methods. +Geoxygene-appli : Shaders have been cleaned up. +Geoxygene-style : adapted the expressive rendering classes for the rendering methods +Geoxygene-util : some fixes.