@@ -36,7 +36,10 @@ import java.awt.geom.AffineTransform;
 import java.awt.geom.NoninvertibleTransformException;
 import java.awt.image.AffineTransformOp;
 import java.awt.image.BufferedImage;
+import java.io.File;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Iterator;
@@ -54,15 +57,18 @@ import fr.ign.cogit.geoxygene.api.spatial.coordgeom.IPolygon;
 import fr.ign.cogit.geoxygene.api.spatial.geomaggr.IMultiSurface;
 import fr.ign.cogit.geoxygene.api.spatial.geomprim.IOrientableSurface;
 import fr.ign.cogit.geoxygene.api.spatial.geomprim.IRing;
+import fr.ign.cogit.geoxygene.appli.AbstractProjectFrame;
+import fr.ign.cogit.geoxygene.appli.GeOxygeneApplication;
 import fr.ign.cogit.geoxygene.appli.Viewport;
 import fr.ign.cogit.geoxygene.appli.gl.BinaryGradientImage;
+import fr.ign.cogit.geoxygene.appli.gl.GLContext;
 import fr.ign.cogit.geoxygene.appli.gl.BinaryGradientImage.BinaryGradientImageParameters;
 import fr.ign.cogit.geoxygene.appli.gl.BinaryGradientImage.GradientPixel;
 import fr.ign.cogit.geoxygene.appli.task.TaskState;
 import fr.ign.cogit.geoxygene.style.texture.ProbabilistTileDescriptor;
-import fr.ign.cogit.geoxygene.style.texture.TileDistributionTextureDescriptor;
-import fr.ign.cogit.geoxygene.style.texture.TileDistributionTextureDescriptor.DistributionManagementType;
-import fr.ign.cogit.geoxygene.style.texture.TileDistributionTextureDescriptor.TileBlendingType;
+import fr.ign.cogit.geoxygene.style.texture.TileDistributionTexture;
+import fr.ign.cogit.geoxygene.style.texture.TileDistributionTexture.DistributionManagementType;
+import fr.ign.cogit.geoxygene.style.texture.TileDistributionTexture.TileBlendingType;
 import fr.ign.cogit.geoxygene.util.gl.BasicTexture;
 import fr.ign.cogit.geoxygene.util.gl.Sample;
 import fr.ign.cogit.geoxygene.util.gl.Tile;
@@ -73,21 +79,15 @@ import fr.ign.cogit.geoxygene.util.graphcut.GraphCut;
  * @author JeT
  * 
  */
-public class TileDistributionTextureTask extends
-        AbstractTextureTask<BasicTexture> {
+public class TileDistributionTextureTask extends AbstractTextureTask<BasicTexture> {
 
-    private static final Logger logger = Logger
-            .getLogger(TileDistributionTextureTask.class.getName()); // logger
+    private static final Logger logger = Logger.getLogger(TileDistributionTextureTask.class.getName()); // logger
 
     private final List<Pair<TileProbability, Tile>> tilesToBeApplied = new ArrayList<Pair<TileProbability, Tile>>();
     private BinaryGradientImage texImage; //
     private Shape featureShape = null; // shape corresponding to the given
                                        // feature in the image texture space
-    // private final DistanceFieldTexture texture = null;
-    // private double minX;
-    // private double minY;
-    // private double maxX;
-    // private double maxY;
+
     private int textureWidth = -1; // final textured image width & height
     private int textureHeight = -1; // dimension are computed using resolution
                                     // and map scale
@@ -96,38 +96,38 @@ public class TileDistributionTextureTask extends
     private final List<IPolygon> polygons = new ArrayList<IPolygon>();
     private final List<IRing> rings = new ArrayList<IRing>();
     private final List<ParameterizedSegment> segments = new ArrayList<ParameterizedSegment>();
-    // private DistanceFieldFrontierPixelRenderer pixelRenderer = null;
-    // private final Set<Point> modifiedPixels = new HashSet<Point>();
-    // private final AffineTransform transform = new AffineTransform();
+
     private IFeatureCollection<IFeature> featureCollection = null;
-    private Viewport viewport = null;
 
     private final boolean memoryMonitoring = false;
     private long previousUsedMemory = 0;
 
     private BasicTexture basicTexture = null;
 
-    private TileDistributionTextureDescriptor textureDescriptor = null;
+    private TileDistributionTexture textureDescriptor = null;
+
+    // XXX Terrible. The viewport should be accessed in a static way (like the
+    // active LayerViewPanel).
+    private Viewport viewport;
 
     /**
      * @param textureDescriptor
      * @param featureCollection
      * @param viewport
      */
-    public TileDistributionTextureTask(String name,
-            TileDistributionTextureDescriptor textureDescriptor,
-            IFeatureCollection<IFeature> featureCollection, Viewport viewport) {
-        super("TileDistribution" + name);
+    public TileDistributionTextureTask(URI identifier, TileDistributionTexture textureDescriptor, IFeatureCollection<IFeature> featureCollection, Viewport viewport) {
+        super("TileDistribution" + identifier);
+        this.id = identifier;
         this.textureDescriptor = textureDescriptor;
         this.basicTexture = new BasicTexture();
+        this.viewport = viewport;
         this.setFeatureCollection(featureCollection);
-        this.setViewport(viewport);
     }
 
     /**
      * @return the textureDescriptor
      */
-    public TileDistributionTextureDescriptor getTextureDescriptor() {
+    public TileDistributionTexture getTextureDescriptor() {
         return this.textureDescriptor;
     }
 
@@ -137,43 +137,34 @@ public class TileDistributionTextureTask extends
      * @throws IOException
      */
     private final void initTiles() throws IOException {
-        for (ProbabilistTileDescriptor tileDesc : this.getTextureDescriptor()
-                .getTiles()) {
-            Tile tile = DefaultTile.read(new URL(tileDesc.getUrl()),
-                    tileDesc.getScaleFactor());
-            DistanceTileProbability p = new DistanceTileProbability(
-                    this.texImage, tileDesc.getMinDistance(),
-                    tileDesc.getMaxDistance(),
-                    tileDesc.getInRangeProbability(),
+        for (ProbabilistTileDescriptor tileDesc : this.getTextureDescriptor().getTiles()) {
+            URI complete_uri = tileDesc.getAbsoluteURI();
+            Tile tile = DefaultTile.read(complete_uri.toURL(), tileDesc.getScaleFactor());
+            DistanceTileProbability p = new DistanceTileProbability(this.texImage, tileDesc.getMinDistance(), tileDesc.getMaxDistance(), tileDesc.getInRangeProbability(),
                     tileDesc.getOutOfRangeProbability());
             this.tilesToBeApplied.add(new Pair<TileProbability, Tile>(p, tile));
         }
     }
 
-    synchronized public void updateContent()
-            throws NoninvertibleTransformException {
-        this.setPrintResolution(this.getTextureDescriptor()
-                .getTextureResolution());
+    synchronized public void updateContent() throws NoninvertibleTransformException {
+        this.setPrintResolution(this.getTextureDescriptor().getTextureResolution());
 
         this.polygons.clear();
         // convert the multisurface as a collection of polygons
         for (IFeature feature : this.featureCollection) {
             if (feature.getGeom() instanceof IMultiSurface<?>) {
-                IMultiSurface<?> multiSurface = (IMultiSurface<?>) feature
-                        .getGeom();
+                IMultiSurface<?> multiSurface = (IMultiSurface<?>) feature.getGeom();
                 for (IOrientableSurface surface : multiSurface.getList()) {
                     if (surface instanceof IPolygon) {
                         IPolygon polygon = (IPolygon) surface;
                         this.polygons.add(polygon);
                     } else {
-                        logger.error("Distance Field Parameterizer does handle multi surfaces containing only polygons, not "
-                                + surface.getClass().getSimpleName());
+                        logger.error("Distance Field Parameterizer does handle multi surfaces containing only polygons, not " + surface.getClass().getSimpleName());
                     }
                 }
 
             } else {
-                logger.error("geometry type not handled : "
-                        + feature.getGeom().getClass().getSimpleName());
+                logger.error("geometry type not handled : " + feature.getGeom().getClass().getSimpleName());
             }
         }
         // collect all rings in one list
@@ -194,11 +185,9 @@ public class TileDistributionTextureTask extends
                 IDirectPosition pd2 = ring.coord().get(j);
                 double segmentLength = pd2.distance(pd1);
 
-                ParameterizedPoint p1 = new ParameterizedPoint(pd1.getX(),
-                        pd1.getY(), u, 0);
+                ParameterizedPoint p1 = new ParameterizedPoint(pd1.getX(), pd1.getY(), u, 0);
                 u += segmentLength;
-                ParameterizedPoint p2 = new ParameterizedPoint(pd2.getX(),
-                        pd2.getY(), u, 0);
+                ParameterizedPoint p2 = new ParameterizedPoint(pd2.getX(), pd2.getY(), u, 0);
 
                 this.segments.add(new ParameterizedSegment(p1, p2));
             }
@@ -208,8 +197,7 @@ public class TileDistributionTextureTask extends
         IDirectPositionList viewDirectPositionList = null;
         IDirectPosition lastPosition = null;
         for (IPolygon polygon : this.polygons) {
-            IDirectPositionList list = this.viewport
-                    .toViewDirectPositionList(polygon);
+            IDirectPositionList list = this.viewport.toViewDirectPositionList(polygon);
             if (viewDirectPositionList == null) {
                 viewDirectPositionList = list;
                 lastPosition = list.get(list.size() - 1);
@@ -219,10 +207,6 @@ public class TileDistributionTextureTask extends
             }
         }
         this.featureShape = this.toPolygonShape(viewDirectPositionList);
-
-        // sort segments to begin with smallest ones
-        // Collections.sort(this.segments, new SegmentComparator());
-
     }
 
     /**
@@ -264,8 +248,7 @@ public class TileDistributionTextureTask extends
      *            a direct position list in view coordinates
      * @return A shape representing the polygon in view coordinates
      */
-    private Shape toPolygonShape(
-            final IDirectPositionList viewDirectPositionList) {
+    private Shape toPolygonShape(final IDirectPositionList viewDirectPositionList) {
         int numPoints = viewDirectPositionList.size();
         int[] xpoints = new int[numPoints];
         int[] ypoints = new int[numPoints];
@@ -291,14 +274,10 @@ public class TileDistributionTextureTask extends
             // + this.getMapScale() + " resolution = "
             // + this.getPrintResolution() + " /  MperINCH  = "
             // + M_PER_INCH);
-            this.textureWidth = (int) (this.getEnvelope().width()
-                    * this.getMapScale() * this.getPrintResolution() / GradientTextureTask.M_PER_INCH);
+            this.textureWidth = (int) (this.getEnvelope().width() * this.getMapScale() * this.getPrintResolution() / GradientTextureTask.M_PER_INCH);
             if (this.textureWidth <= 0) {
-                logger.debug("texture width is invalid: envelope width = "
-                        + this.getEnvelope().width() + " * scale = "
-                        + this.getMapScale() + " resolution = "
-                        + this.getPrintResolution() + " /  MperINCH  = "
-                        + GradientTextureTask.M_PER_INCH);
+                logger.debug("texture width is invalid: envelope width = " + this.getEnvelope().width() + " * scale = " + this.getMapScale() + " resolution = " + this.getPrintResolution()
+                        + " /  MperINCH  = " + GradientTextureTask.M_PER_INCH);
             }
         }
         return this.textureWidth;
@@ -313,14 +292,10 @@ public class TileDistributionTextureTask extends
     @Override
     public int getTextureHeight() {
         if (this.textureHeight <= 0) {
-            this.textureHeight = (int) (this.getEnvelope().length()
-                    * this.getMapScale() * this.getPrintResolution() / GradientTextureTask.M_PER_INCH);
+            this.textureHeight = (int) (this.getEnvelope().length() * this.getMapScale() * this.getPrintResolution() / GradientTextureTask.M_PER_INCH);
             if (this.textureHeight <= 0) {
-                logger.error("texture height is invalid: envelope height = "
-                        + this.getEnvelope().height() + " * scale = "
-                        + this.getMapScale() + " resolution = "
-                        + this.getPrintResolution() + " /  MperINCH  = "
-                        + GradientTextureTask.M_PER_INCH);
+                logger.error("texture height is invalid: envelope height = " + this.getEnvelope().height() + " * scale = " + this.getMapScale() + " resolution = " + this.getPrintResolution()
+                        + " /  MperINCH  = " + GradientTextureTask.M_PER_INCH);
             }
         }
         return this.textureHeight;
@@ -373,7 +348,7 @@ public class TileDistributionTextureTask extends
     @Override
     public void run() {
         this.setState(TaskState.WAITING);
-        this.setNeedWriting(false);
+        this.setNeedCaching(false);
         this.setState(TaskState.INITIALIZING);
         this.setState(TaskState.RUNNING);
         this.setProgress(0);
@@ -386,12 +361,10 @@ public class TileDistributionTextureTask extends
             this.monitorMemory("after generate gradient texture");
             this.getTextureDescriptor().setxRepeat(false);
             this.getTextureDescriptor().setyRepeat(false);
-            this.basicTexture.createTextureImage(this.getTextureWidth(),
-                    this.getTextureHeight());
+            this.basicTexture.createTextureImage(this.getTextureWidth(), this.getTextureHeight());
 
             this.monitorMemory("after setting dimension");
-            TextureImageTileChooser tileChooser = new TextureImageTileChooser(
-                    this.textureDescriptor.getDistributionManagement());
+            TextureImageTileChooser tileChooser = new TextureImageTileChooser(this.textureDescriptor.getDistributionManagement());
             for (Pair<TileProbability, Tile> pair : this.tilesToBeApplied) {
                 tileChooser.addTile(pair.first(), pair.second());
             }
@@ -406,8 +379,7 @@ public class TileDistributionTextureTask extends
                 // keep only patchs > 80% visible
                 visibilityRatioThreshold = 0.8;
             }
-            TextureImageSamplerMipMap sampler = new TextureImageSamplerMipMap(
-                    this.texImage, tileChooser, visibilityRatioThreshold);
+            TextureImageSamplerMipMap sampler = new TextureImageSamplerMipMap(this.texImage, tileChooser, visibilityRatioThreshold);
 
             if (this.isStopRequested()) {
                 this.setState(TaskState.STOPPED);
@@ -416,22 +388,20 @@ public class TileDistributionTextureTask extends
 
             this.monitorMemory("after sampler creation");
             BufferedImage bi = null;
-            bi = this.pasteTiles(this.texImage, this.tilesToBeApplied, sampler,
-                    this.featureShape);
+            bi = this.pasteTiles(this.texImage, this.tilesToBeApplied, sampler, this.featureShape);
             this.monitorMemory("tiles pasted");
             // TextureImageUtil.save(this.texImage, "texturedImage");
             // ImageIO.write(bi, "PNG", new File("texturedPolygon.png"));
             // Flip the image vertically
             AffineTransform tx = AffineTransform.getScaleInstance(1, -1);
             tx.translate(0, -bi.getHeight(null));
-            AffineTransformOp op = new AffineTransformOp(tx,
-                    AffineTransformOp.TYPE_NEAREST_NEIGHBOR);
+            AffineTransformOp op = new AffineTransformOp(tx, AffineTransformOp.TYPE_NEAREST_NEIGHBOR);
             bi = op.filter(bi, null);
 
             this.monitorMemory("texture image transformed");
             this.getTexture().setTextureImage(bi);
             this.setProgress(1);
-            this.setNeedWriting(true);
+            this.setNeedCaching(true);
             this.setState(TaskState.FINISHED);
             this.monitorMemory("termination");
         } catch (Exception e) {
@@ -445,30 +415,23 @@ public class TileDistributionTextureTask extends
      * @throws NoninvertibleTransformException
      * @throws IOException
      */
-    private boolean generateGradientTexture()
-            throws NoninvertibleTransformException, IOException {
+    private boolean generateGradientTexture() throws NoninvertibleTransformException, IOException {
         this.updateContent();
         if (this.isStopRequested()) {
             this.setState(TaskState.STOPPED);
             return false;
         }
-        double maxCoastLine = this.getTextureDescriptor()
-                .getMaxCoastlineLength();
+        double maxCoastLine = this.getTextureDescriptor().getMaxCoastlineLength();
         int blurSize = this.getTextureDescriptor().getBlurSize();
-        BinaryGradientImageParameters params = new BinaryGradientImageParameters(
-                this.getTextureWidth(), this.getTextureHeight(), this.polygons,
-                this.getEnvelope(), maxCoastLine, blurSize);
+        BinaryGradientImageParameters params = new BinaryGradientImageParameters(this.getTextureWidth(), this.getTextureHeight(), this.polygons, this.getEnvelope(), maxCoastLine, blurSize);
         try {
-            this.texImage = BinaryGradientImage
-                    .generateBinaryGradientImage(params);
+            this.texImage = BinaryGradientImage.generateBinaryGradientImage(params);
         } catch (Exception e1) {
-            logger.error("An exception has been thrown generating Binary Gradient Image in "
-                    + this.getClass().getSimpleName());
+            logger.error("An exception has been thrown generating Binary Gradient Image in " + this.getClass().getSimpleName());
             e1.printStackTrace();
         }
         if (this.texImage == null) {
-            this.setError(new IllegalStateException(
-                    "Gradient Image generation returns a null value"));
+            this.setError(new IllegalStateException("Gradient Image generation returns a null value"));
             this.setState(TaskState.ERROR);
             return false;
         }
@@ -504,16 +467,13 @@ public class TileDistributionTextureTask extends
      * @param clippingShape
      * @return
      */
-    private BufferedImage pasteTiles(BinaryGradientImage image,
-            List<Pair<TileProbability, Tile>> tilesToBeApplied,
-            SamplingAlgorithm sampler, Shape clippingShape) {
+    private BufferedImage pasteTiles(BinaryGradientImage image, List<Pair<TileProbability, Tile>> tilesToBeApplied, SamplingAlgorithm sampler, Shape clippingShape) {
         image.invalidateUVBounds();
         // TextureImageTileChooser tileChooser = new TextureImageTileChooser();
         // for (Pair<TileProbability, Tile> pair : tilesToBeApplied) {
         // tileChooser.addTile(pair.first(), pair.second());
         // }
-        BufferedImage bi = new BufferedImage(this.getTextureWidth(),
-                this.getTextureHeight(), BufferedImage.TYPE_4BYTE_ABGR);
+        BufferedImage bi = new BufferedImage(this.getTextureWidth(), this.getTextureHeight(), BufferedImage.TYPE_4BYTE_ABGR);
         GraphCut graphCut = null;
         if (this.getTextureDescriptor().getBlending() == TileBlendingType.GRAPHCUT) {
             graphCut = new GraphCut(bi);
@@ -523,8 +483,7 @@ public class TileDistributionTextureTask extends
         g2.setComposite(AlphaComposite.Clear);
         g2.fillRect(0, 0, this.getTextureWidth(), this.getTextureHeight());
         g2.setComposite(AlphaComposite.SrcOver);
-        g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING,
-                RenderingHints.VALUE_ANTIALIAS_ON);
+        g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
         // if (clippingShape != null) {
         // Shape screenSpaceShape =
         // this.transform.createTransformedShape(clippingShape);
@@ -549,21 +508,16 @@ public class TileDistributionTextureTask extends
                 continue;
             }
             if (tile.getImage() == null) {
-                throw new IllegalStateException("sample "
-                        + sample.getLocation()
-                        + " has an associated tile with no image");
+                throw new IllegalStateException("sample " + sample.getLocation() + " has an associated tile with no image");
             }
-            GradientPixel pixel = image
-                    .getPixel((int) xTexture, (int) yTexture);
-            if (pixel == null || !(pixel.in || pixel.frontier != 0)
-                    || pixel.vGradient == null) {
+            GradientPixel pixel = image.getPixel((int) xTexture, (int) yTexture);
+            if (pixel == null || !(pixel.in || pixel.frontier != 0) || pixel.vGradient == null) {
                 logger.warn("invalid pixel = " + pixel);
                 continue;
             } else {
                 // TODO: Check if the tile has a part outside geometry
                 // to not display it when DistributionManagement is CUT_OUTSIDE
-                AffineTransform transform = image.tileTransform((int) xTexture,
-                        (int) yTexture, tile.getWidth(), tile.getHeight());
+                AffineTransform transform = image.tileTransform((int) xTexture, (int) yTexture, tile.getWidth(), tile.getHeight());
                 if (this.getTextureDescriptor().getBlending() == TileBlendingType.GRAPHCUT) {
                     graphCut.pasteTile(tile, transform);
                 } else {
@@ -589,22 +543,16 @@ public class TileDistributionTextureTask extends
         return bi;
     }
 
-    public void setFeatureCollection(
-            IFeatureCollection<IFeature> iFeatureCollection) {
+    public void setFeatureCollection(IFeatureCollection<IFeature> iFeatureCollection) {
         this.featureCollection = iFeatureCollection;
 
-    }
-
-    public void setViewport(Viewport viewport) {
-        this.viewport = viewport;
     }
 
     private final void monitorMemory(String message) {
         if (this.memoryMonitoring) {
             Runtime runtime = Runtime.getRuntime();
             long usedMemory = runtime.totalMemory() - runtime.freeMemory();
-            System.err.println(message + " : "
-                    + (usedMemory - this.previousUsedMemory));
+            System.err.println(message + " : " + (usedMemory - this.previousUsedMemory));
             this.previousUsedMemory = usedMemory;
         }
     }
